language/move-lang/tests/move_check/typing/duplicate_function_parameter_names.exp
error: 

   ┌── tests/move_check/typing/duplicate_function_parameter_names.move:2:9 ───
   │
 2 │     foo(x: u64, x: u64) {}
   │                 ^ Duplicate parameter with name 'x'
   ·
 2 │     foo(x: u64, x: u64) {}
   │         - Previously declared here
   │

